Adjusted css fix hidden overflow incorrectly being applied to to all views rather than just the spectator view.

--- a/scoring/competitions/static/style.css
+++ b/scoring/competitions/static/style.css
@@ -19,8 +19,9 @@ table.content th, table.content td {padding:10px;}
     padding-bottom: 10px;
     text-align: center;
 }
+.spectator-text {color: black; overflow-y: hidden;}
 .score {font-size: 50vh;}
-.comp-text {color: black; overflow-y: hidden;}
+.comp-text {color: black;}
 .timer {
     float: right;font-size: 20vh;
 }
